--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -17,14 +17,14 @@
             <li class="cat-{{ item.id }}">
                 <a href="#">
                     <i class="fa fa-plus fa-fw"></i>
-                        Hola
+                        Edficio 1
                 </a>
             </li>
 
             <li class="cat-{{ item.id }}">
                 <a href="#">
                     <i class="fa fa-plus fa-fw"></i>
-                        Hola
+                        Edficio 2
                 </a>
             </li>
         </ul>
