--- a/stib-administraciones/templates/_menu_superior.html
+++ b/stib-administraciones/templates/_menu_superior.html
@@ -16,7 +16,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/inicio">Inicio <span class="sr-only">(current)</span></a></li>
+                <li><a href="/inicio">Inicio <span class="sr-only">(current)</span></a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/faq/">Preguntas Frecuentes <span class="sr-only">(current)</span></a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/contacto/">Contacto <span class="sr-only">(current)</span></a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -36,6 +42,8 @@
                             </li>
                         </ul>
                     </li>
+                {% else %}
+                    <li><a href="{% url "account_login" %}"><i class="fa fa-user"></i> Ingresá</a></li>
                 {% endif %}
             </ul>
         </div><!-- /.navbar-collapse -->
