--- a/stib-administraciones/templates/account/login.html
+++ b/stib-administraciones/templates/account/login.html
@@ -8,25 +8,23 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-5">
 
-
-      <h2>{% trans "Sign In" %}</h2>
-
-
-
-      <form class="login" method="POST" action="{% url 'account_login' %}">
-        {% csrf_token %}
-        {{ form|crispy }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-        <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
-      </form>
+    <div class="row">
+        <div class="col-md-9">
+          <h1 class="page-header">{% trans "Sign In" %}</h1>
+        </div>
     </div>
-  </div>
-</div>
+    <div class="row">
+        <div class="col-md-5">
+            <form class="login" method="POST" action="{% url 'account_login' %}">
+            {% csrf_token %}
+            {{ form|crispy }}
+                {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+            <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+            </form>
+        </div>
+    </div>
+
 {% endblock %}
