--- a/stib-administraciones/templates/perfiles/perfiles_form.html
+++ b/stib-administraciones/templates/perfiles/perfiles_form.html
@@ -5,20 +5,22 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-9">
-                <h1>Editar Perfil</h1>
-                <form class="form-horizontal" method="post" action="/perfiles/update/">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <div class="control-group">
-                      <div class="controls">
-                        <button type="submit" class="btn btn-primary">Editar</button>
-                      </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+<div class="row">
+    <div class="col-lg-9">
+        <h1 class="page-header">Editar Perfil</h1>
     </div>
+</div>
+<div class="row">
+    <div class="col-lg-5">
+        <form class="form-horizontal" method="post" action="/perfiles/update/">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <div class="control-group">
+              <div class="controls">
+                <button type="submit" class="btn btn-primary">Editar</button>
+              </div>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
