--- a/stib-administraciones/templates/_menu_superior.html
+++ b/stib-administraciones/templates/_menu_superior.html
@@ -36,6 +36,9 @@
                             <li>
                                 <a id="perfiles_update" href="/perfiles/update/"><i class="fa fa-cog"></i> Modificar mi perfil </a>
                             </li>
+                            <li>
+                                <a id="cambiar_contrasena" href="/accounts/password/change/"><i class="fa fa-key"></i> Cambiar contraseña </a>
+                            </li>
                             <li class="divider"></li>
                             <li>
                                 <a id="account_logout" href="{% url "account_logout" %}"><i class="fa fa-power-off"></i> Salir </a>
