--- a/stib-administraciones/staticfiles/css/project.css
+++ b/stib-administraciones/staticfiles/css/project.css
@@ -187,6 +187,6 @@ background-color: #f8f8f8;
 border-color: #e7e7e7;
 }
 
-.navbar-default  .navbar-nav>li>a {
+.navbar-default  .navbar-right>li>a {
     color: #428bca;
 }
