--- a/stib-administraciones/templates/account/password_change.html
+++ b/stib-administraciones/templates/account/password_change.html
@@ -5,18 +5,19 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
+<div class="row">
+    <div class="col-md-9">
+        <h2 class="page-header">{% trans "Change Password" %}</h2>
+    </div>
+</div>
+<div class="row">
     <div class="col-md-5">
-        <h2>{% trans "Change Password" %}</h2>
-
         <form method="POST" action="./" class="password_change">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="btn" type="submit" name="action">{% trans "Change Password" %}</button>
+            <button class="btn btn-primary" type="submit" name="action">{% trans "Change Password" %}</button>
         </form>
     </div>
-  </div>
 </div>
 {% endblock %}
 
