--- a/stib-administraciones/templates/_menu_superior.html
+++ b/stib-administraciones/templates/_menu_superior.html
@@ -39,6 +39,11 @@
                             <li>
                                 <a id="cambiar_contrasena" href="/accounts/password/change/"><i class="fa fa-key"></i> Cambiar contraseña </a>
                             </li>
+                            {% if  request.user.is_staff == False  %}
+                                <li>
+                                    <a id="feedback" href="{% url 'feedback_create' %}"><i class="fa fa-comment"></i> Feedback </a>
+                                </li>
+                            {% endif %}
                             <li class="divider"></li>
                             <li>
                                 <a id="account_logout" href="{% url "account_logout" %}"><i class="fa fa-power-off"></i> Salir </a>
