--- a/stib-administraciones/templates/flatpages/default.html
+++ b/stib-administraciones/templates/flatpages/default.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
+{% load perfiles_tags %}
 
 {% block content %}
     <div class="row">
+        <div class="col-lg-12">
+            {% mostrar_mensaje_bienvenida request.user.id %}
+        </div>
         <div class="col-lg-9">
             <h1 class="page-header">{{ flatpage.title }}</h1>
-
             {{ flatpage.content|safe }}
-
         </div>
     </div>
 {% endblock %}
