--- a/stib-administraciones/templates/_mensaje_completar_perfil.html
+++ b/stib-administraciones/templates/_mensaje_completar_perfil.html
@@ -3,11 +3,13 @@
     <div class="alert alert-info" role="alert">
         <div class="row">
             <div class="col-lg-9">
-                Aún no tienes actualizado tu perfil, sería de mucha utilidad que edites tus datos.
+                <b>Aún no tienes actualizado tu perfil, sería de mucha utilidad que modifiques tus datos.</b>
             </div>
-            <div class="col-lg-12">
-                <a class="btn btn-success pull-right">Gracias, en otro momento</a>
-                <a href="/perfiles/update" class="btn btn-primary pull-right">Modificar</a>
+            <div class="col-lg-7"></div>
+            <div class="col-lg-5">
+                <a href="/perfiles/update" class="btn btn-primary">Modificar</a>
+                <a class="btn btn-success">Gracias, en otro momento</a>
+
             </div>
         </div>
     </div>
