--- a/stib-administraciones/templates/_menu_superior.html
+++ b/stib-administraciones/templates/_menu_superior.html
@@ -21,6 +21,11 @@
             <ul class="nav navbar-nav">
                 <li><a href="/faq/">Preguntas Frecuentes <span class="sr-only">(current)</span></a></li>
             </ul>
+            {% if request.user.is_authenticated %}
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'novedades_list' %}">Novedades <span class="sr-only">(current)</span></a></li>
+                </ul>
+            {% endif %}
             <ul class="nav navbar-nav">
                 <li><a href="/contacto/">Contacto <span class="sr-only">(current)</span></a></li>
             </ul>
