--- a/stib-administraciones/templates/novedades/novedades_list.html
+++ b/stib-administraciones/templates/novedades/novedades_list.html
@@ -1,3 +1,35 @@
 {% extends "base.html" %}
 
 {% block title %} Novedades {% endblock %}
+
+{% block content %}
+
+    {% if object_list %}
+        {% for novedad in object_list %}
+            <div class="row">
+                <div class="col-lg-9">
+                    <h1 class="page-header">
+                        <a>{{ novedad.titulo }}</a>
+                    </h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-9">
+                    <b>Autor:</b> {{ novedad.user.username }} |
+                    <b>Fecha:</b> {{ novedad.modificado|date:"SHORT_DATE_FORMAT" }} |
+                    <b>Etiquetas:</b>
+                    {% for t in novedad.tags.all %}
+                        {{  t.name }}
+                    {% endfor %}
+                    <br><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-9">
+                    {% autoescape off %}{{ novedad.contenido|truncatewords:50 }} {% endautoescape %}
+                </div>
+            </div>
+        {% endfor %}
+    {% endif %}
+
+{% endblock %}
