--- a/stib-administraciones/templates/novedades/novedades_list.html
+++ b/stib-administraciones/templates/novedades/novedades_list.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
-{% load pagination_tags %}
+{% load i18n pagination_tags %}
 {% block title %} Novedades {% endblock %}
 
 {% block content %}
-{% autopaginate object_list 2 %}
+
+{% autopaginate object_list 10 %}
+
     {% if object_list %}
         {% for novedad in object_list %}
             <div class="row">
@@ -28,11 +30,19 @@
                 <div class="col-lg-9">
                     {% autoescape off %}{{ novedad.contenido|truncatewords:50 }} {% endautoescape %}
                     <br>
-                    <a>Leer mas...</a>
+                    <a href="{% url 'novedades_detail' novedad.id %}">
+                        Leer mas...
+                    </a>
                 </div>
             </div>
         {% endfor %}
-
+        <div class="pull-right">{% paginate %}</div>
+    {% else %}
+        <div class="row">
+            <div class="col-lg-9">
+                <div>No hay novedades.</div>
+            </div>
+        </div>
     {% endif %}
-{% paginate %}
+
 {% endblock %}
