Filtro por tags

--- a/stib-administraciones/templates/novedades/novedades_list.html
+++ b/stib-administraciones/templates/novedades/novedades_list.html
@@ -21,7 +21,9 @@
                     <b>Fecha:</b> {{ novedad.modificado|date:"SHORT_DATE_FORMAT" }} |
                     <b>Etiquetas:</b>
                     {% for t in novedad.tags.all %}
-                        <a class="label label-default">{{  t.name }}</a>
+                        <a href="/novedades/tag/{{ t.name }}" class="label label-default">
+                            {{  t.name }}
+                        </a>
                     {% endfor %}
                     <br><br>
                 </div>
