WIP - Menu lateral con edificios.

--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -14,20 +14,18 @@
                 <!-- /input-group -->
             </li>
 
-            <li class="cat-{{ item.id }}">
-                <a href="#">
-                    <i class="fa fa-plus fa-fw"></i>
-                        Edficio 1
-                </a>
-            </li>
+            <!-- Lista de edificios -->
+            <li class="cat-1">
+                <a href="#"><i class="fa fa-building fa-fw"></i> Mis Clientes<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li class="cat-2"> <a> 111 </a> </li>
+                    <li class="cat-2"> <a> 222 </a> </li>
+                </ul>
+            </li><!-- / Lista de edificios -->
 
-            <li class="cat-{{ item.id }}">
-                <a href="#">
-                    <i class="fa fa-plus fa-fw"></i>
-                        Edficio 2
-                </a>
-            </li>
         </ul>
+
+
         <!-- /#side-menu -->
     </div>
     <!-- /.sidebar-collapse -->
