--- a/stib-administraciones/templates/base.html
+++ b/stib-administraciones/templates/base.html
@@ -70,6 +70,8 @@
 
               <!-- place project specific Javascript in this file -->
               <script src="{% static 'js/project.js' %}"></script>
+
+              <script src="{% static 'js/jquery.metisMenu.js' %}"></script>
         {% endblock javascript %}
     </body>
 </html>
