--- a/stib-administraciones/templates/base.html
+++ b/stib-administraciones/templates/base.html
@@ -17,7 +17,10 @@
             <!-- Bootstrap 3 -->
             <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
             <!-- Font-Awesome -->
-            <link href="{% static "font-awesome/css/font-awesome.css" %}" rel="stylesheet">
+            <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
+            <!-- include data-table css -->
+            <link  rel="stylesheet" href="{% static 'libs/datatablejs/css/jquery.dataTables.min.css' %}">
+            <link  rel="stylesheet" href="{% static 'libs/datatablejs/css/DT_bootstrap.css' %}">
             <!-- Project specific CSS -->
             <link href="{% static 'css/project.css' %}" rel="stylesheet">
         {% endblock %}
@@ -60,18 +63,20 @@
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         {% block javascript %}
-              <!-- Latest JQuery -->
-              <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+            <!-- Latest JQuery -->
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-              <!-- Bootstrap Js -->
-              <script src="{% static 'js/bootstrap.min.js' %}"></script>
+            <!-- Bootstrap Js -->
+            <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-              <!-- Your stuff: Third-party javascript libraries go here -->
-
-              <!-- place project specific Javascript in this file -->
-              <script src="{% static 'js/project.js' %}"></script>
-
-              <script src="{% static 'js/jquery.metisMenu.js' %}"></script>
+            <!-- Your stuff: Third-party javascript libraries go here -->
+            <!-- include Datatable -->
+            <script type="text/javascript" src="{% static 'libs/datatablejs/js/jquery.dataTables.js' %}"></script>
+            <script type="text/javascript" src="{% static 'libs/datatablejs/js/DT_bootstrap.js' %}"></script></script>
+            <!-- place project specific Javascript in this file -->
+            <script src="{% static 'js/project.js' %}"></script>
+            <!-- Menu desplegable bootstrap -->
+            <script src="{% static 'js/jquery.metisMenu.js' %}"></script>
         {% endblock javascript %}
     </body>
 </html>
