--- a/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
+++ b/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
@@ -1,7 +1,51 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
+{% load thumbnail %}
 
 {% block title %} {{object.nombre}} {% endblock %}
 
 {% block content %}
-    {{object.nombre}}
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">{{ object.nombre }}</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
+            {% if object.foto_fachada %}
+                <img class="img-circle pull-right_"
+                 src="{% thumbnail object.foto_fachada 200 %}" alt="No imagen">
+            {% else %}
+                <img class="img-circle pull-right_"
+                 src="{% static 'images/edificio-sin-foto.png' %}">
+                <br>
+                <a>Editá los datos del edificio para añadir una foto de fachada</a>
+            {% endif %}
+
+        </div>
+        <div class="col-lg-6">
+            <div class="panel panel-primary">
+              <div class="panel-heading">Detalles</div>
+              <div class="panel-body">
+                  <div class="well well-lg">
+                      <label><strong>Dirección: </strong></label>
+                      {{ object.direccion }}
+                      <br>
+                      <label><strong>Código: </strong></label>
+                      {{ object.codigo }}
+                      <br>
+                      <label><strong>Cantidad de pisos: </strong></label>
+                      {% if object.cantidad_pisos %}{{ object.cantidad_pisos }}{% else %}-{% endif %}
+                      <br>
+                      <label><strong>Cantidad de unidades: </strong></label>
+                      {% if object.cantidad_unidades %}{{ object.cantidad_unidades}{% else %}-{% endif %}
+                      <br>
+                      <label><strong>Comentarios: </strong></label>
+                      {% if object.comentario %}{{ object.comentario }}{% else %}-{% endif %}
+                      <br>
+                  </div>
+              </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
