--- a/stib-administraciones/templates/edificios/edificios_form.html
+++ b/stib-administraciones/templates/edificios/edificios_form.html
@@ -16,7 +16,7 @@
                 {% endif %}
                 Edificio
             </h1>
-            <form class="form-horizontal" method="post">
+            <form class="form-horizontal" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="control-group">
