--- a/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
+++ b/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
@@ -5,6 +5,8 @@
 {% block title %} {{object.nombre}} {% endblock %}
 
 {% block content %}
+
+
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">{{ object.nombre }}</h1>
@@ -33,7 +35,7 @@
         <div class="col-lg-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                  Detalles
+                  <i class="fa fa-bars text-white"></i> Detalles
                   <div class="pull-right">
                       <a title="Editar" href="{% url 'edificios:administraciones_detalles_update' object.id %}">
                           <i class="fa fa-pencil text-white"></i>
@@ -59,10 +61,16 @@
 
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                  Localización
+                  <i class="fa fa-map-marker text-white"></i> Localización
                 </div>
                 <div class="panel-body">
-                    <iframe src="https://www.google.com/maps/embed?pb=Ayacucho+1557%2C+Rosario%2C+Santa+Fe!5e0!3m2!1ses!2sar!4v1427770730560" width="400" height="200" frameborder="0" style="border:0"></iframe>
+                    <iframe
+                      width="420"
+                      height="200"
+                      frameborder="0" style="border:0"
+                      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDnwejTwAlNzvX2DX-0b-_-KrfcJUs6uDo
+                        &q={{object.direccion}}, Rosario, Santa Fe">
+                    </iframe>
                 </div>
             </div>
 
