--- a/stib-administraciones/templates/_menu_superior.html
+++ b/stib-administraciones/templates/_menu_superior.html
@@ -23,7 +23,7 @@
             </ul>
             {% if request.user.is_authenticated %}
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'novedades_list' %}">Novedades <span class="sr-only">(current)</span></a></li>
+                    <li><a href="{% url 'novedades:list' %}">Novedades <span class="sr-only">(current)</span></a></li>
                 </ul>
             {% endif %}
             <ul class="nav navbar-nav">
