--- a/stib-administraciones/templates/novedades/novedades_list.html
+++ b/stib-administraciones/templates/novedades/novedades_list.html
@@ -4,47 +4,70 @@
 
 {% block content %}
 
+
+
 {% autopaginate object_list 10 %}
 
-    {% if object_list %}
-        {% for novedad in object_list %}
+     <div class="row">
+         <!-- Columna de buscardor y Nube tags -->
+         <div class="col-lg-4 pull-right" style="margin-top: 40px">
             <div class="row">
-                <div class="col-lg-9">
-                    <h1 class="page-header">
-                        <a href="{% url 'novedades_detail' novedad.id %}">{{ novedad.titulo }}</a>
-                    </h1>
+                <div class="col-lg-12">
+                        <form id='search-form-novedades' class="input-group" method="GET" action='{% url "novedades:list" %}'>
+                            <input id="q" name="q" type="text" class="form-control" placeholder="Buscar..."  data-provide='typeahead'>
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="submit">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+                        </form>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-9">
-                    <b>Autor:</b> {{ novedad.user.username }} |
-                    <b>Fecha:</b> {{ novedad.modificado|date:"SHORT_DATE_FORMAT" }} |
-                    <b>Etiquetas:</b>
-                    {% for t in novedad.tags.all %}
-                        <a href="/novedades/tag/{{ t.name }}" class="label label-default">
-                            {{  t.name }}
-                        </a>
-                    {% endfor %}
-                    <br><br>
+        </div><!-- / Columna de buscardor y Nube tags -->
+        <!-- Columna con laas novedades -->
+        <div class="col-lg-8">
+            {% if object_list %}
+                {% for novedad in object_list %}
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1 class="page-header">
+                                <a href="{% url 'novedades:detail' novedad.id %}">{{ novedad.titulo }}</a>
+                            </h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <b>Autor:</b> {{ novedad.user.username }} |
+                            <b>Fecha:</b> {{ novedad.modificado|date:"SHORT_DATE_FORMAT" }} |
+                            <b>Etiquetas:</b>
+                            {% for t in novedad.tags.all %}
+                                <a href="/novedades/tag/{{ t.name }}" class="label label-default">
+                                    {{  t.name }}
+                                </a>
+                            {% endfor %}
+                            <br><br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            {% autoescape off %}{{ novedad.contenido|truncatewords:50 }} {% endautoescape %}
+                            <br>
+                            <a href="{% url 'novedades:detail' novedad.id %}">
+                                Leer mas...
+                            </a>
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="pull-right">{% paginate %}</div>
+            {% else %}
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div>No hay novedades.</div>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-9">
-                    {% autoescape off %}{{ novedad.contenido|truncatewords:50 }} {% endautoescape %}
-                    <br>
-                    <a href="{% url 'novedades_detail' novedad.id %}">
-                        Leer mas...
-                    </a>
-                </div>
-            </div>
-        {% endfor %}
-        <div class="pull-right">{% paginate %}</div>
-    {% else %}
-        <div class="row">
-            <div class="col-lg-9">
-                <div>No hay novedades.</div>
-            </div>
-        </div>
-    {% endif %}
+            {% endif %}
+        </div><!-- / Columna con laas novedades -->
+
+     </div>
 
 {% endblock %}
