Novedad, fix html

--- a/stib-administraciones/templates/novedades/novedades_list.html
+++ b/stib-administraciones/templates/novedades/novedades_list.html
@@ -62,7 +62,9 @@
             {% else %}
                 <div class="row">
                     <div class="col-lg-12">
-                        <div>No hay novedades.</div>
+                        <div style="margin-top: 40px">
+                            <b>No hay novedades.</b>
+                        </div>
                     </div>
                 </div>
             {% endif %}
