--- a/stib-administraciones/templates/novedades/novedades_list.html
+++ b/stib-administraciones/templates/novedades/novedades_list.html
@@ -13,14 +13,12 @@
          <div class="col-lg-4 pull-right" style="margin-top: 40px">
             <div class="row">
                 <div class="col-lg-12">
-                        <form id='search-form-novedades' class="input-group" method="GET" action='{% url "novedades:list" %}'>
-                            <input id="q" name="q" type="text" class="form-control" placeholder="Buscar..."  data-provide='typeahead'>
-                            <span class="input-group-btn">
-                                <button class="btn btn-default" type="submit">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                        </form>
+                    {% include 'novedades/_search_form.html' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    {% include 'novedades/_tags_filter.html' %}
                 </div>
             </div>
         </div><!-- / Columna de buscardor y Nube tags -->
