--- a/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
+++ b/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
@@ -1,13 +1,10 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% load thumbnail %}
-{% load fotos_tags %}
 
 {% block title %} {{object.nombre}} {% endblock %}
 
 {% block content %}
-
-
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">{{ object.nombre }}</h1>
@@ -32,31 +29,9 @@
                     </a>
                 {% endif %}
             </div>
-            <div class="panel panel-primary">
-                {% obtener_fotos_por_edificio object.id as fotos %}
-                <div class="panel-heading">
-                  <i class="fa fa-picture-o text-white"></i> Fotos
-                  {% if fotos.count > 0 %}
-                      <div class="pull-right">
-                          <a title="Editar" href="{% url 'edificios:administraciones_detalles_update' object.id %}">
-                              <i class="fa fa-pencil text-white"></i>
-                          </a>
-                      </div>
-                  {% endif %}
-                </div>
-                <div class="panel-body">
-                    {% if fotos.count == 0 %}
-                        <a href="#">Agregue sus primeras fotos</a>
-                    {% else %}
-                        {% for f in fotos|slice:":7" %}
-                            <img src="{% thumbnail f.path 50x50 crop %}">
-                        {% endfor %}
-                    {% endif %}
-                    {% if fotos.count > 7 %}
-                        <a>Todas</a>
-                    {% endif %}
-                </div>
-            </div>
+            <!-- fotos miniaturas -->
+            {% include 'fotos/edificios_fotos.html' %}
+            <!-- / fotos miniaturas -->
         </div>
         <div class="col-lg-6">
             <div class="panel panel-primary">
