--- a/stib-administraciones/templates/productos/productos_list.html
+++ b/stib-administraciones/templates/productos/productos_list.html
@@ -1,45 +1,44 @@
 {% extends "base.html" %}
 {% load i18n pagination_tags %}
-{% block title %} Novedades {% endblock %}
+{% load staticfiles %}
+{% load thumbnail %}
+
+{% block title %} Productos {% endblock %}
 
 {% block content %}
 
-
-
-{% autopaginate object_list 10 %}
+    {% autopaginate object_list 10 %}
 
      <div class="row">
          <!-- Columna de buscardor y Nube tags -->
          <div class="col-lg-4 pull-right" style="margin-top: 40px">
             <div class="row">
                 <div class="col-lg-12">
-                    {% include 'novedades/_search_form.html' %}
+                    {% include 'productos/_search_form.html' %}
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    {% include 'novedades/_tags_filter.html' %}
+                    {% include 'productos/_tags_filter.html' %}
                 </div>
             </div>
         </div><!-- / Columna de buscardor y Nube tags -->
-        <!-- Columna con las novedades -->
+        <!-- Columna con los productos -->
         <div class="col-lg-8">
             {% if object_list %}
-                {% for novedad in object_list %}
+                {% for producto in object_list %}
                     <div class="row">
                         <div class="col-lg-12">
                             <h1 class="page-header">
-                                <a href="{% url 'novedades:detail' novedad.id %}">{{ novedad.titulo }}</a>
+                                <a href="{% url 'productos:detail' producto.id %}">{{ producto.nombre }}</a>
                             </h1>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <b>Autor:</b> {{ novedad.user.username }} |
-                            <b>Fecha:</b> {{ novedad.modificado|date:"SHORT_DATE_FORMAT" }} |
                             <b>Etiquetas:</b>
-                            {% for t in novedad.tags.all %}
-                                <a href="/novedades/tag/{{ t.name }}" class="label label-default">
+                            {% for t in producto.tags.all %}
+                                <a href="/productos/tag/{{ t.name }}" class="label label-default">
                                     {{  t.name }}
                                 </a>
                             {% endfor %}
@@ -47,11 +46,18 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12">
-                            {% autoescape off %}{{ novedad.contenido|truncatewords:50 }} {% endautoescape %}
+                        <div class="col-lg-3">
+                            {% if producto.image %}
+                                <img src="{% thumbnail producto.image  150x150  %}">
+                            {% else %}
+                                <img src="{% static 'images/sin-imagen.jpg' %}">
+                            {% endif %}
+                        </div>
+                        <div class="col-lg-9">
+                            {% autoescape off %}{{ producto.descripcion|truncatewords:30 }} {% endautoescape %}
                             <br>
-                            <a href="{% url 'novedades:detail' novedad.id %}">
-                                Leer mas...
+                            <a href="{% url 'productos:detail' producto.id %}">
+                                Ampliar información...
                             </a>
                         </div>
                     </div>
@@ -61,12 +67,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div style="margin-top: 40px">
-                            <b>No hay novedades.</b>
+                            <b>No hay productos.</b>
                         </div>
                     </div>
                 </div>
             {% endif %}
-        </div><!-- / Columna con las novedades -->
+        </div><!-- / Columna con los productos -->
 
      </div>
 
