--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -36,6 +36,9 @@
                     <li>
                         <a href="{% url 'productos:list' %}"><i class="fa fa-archive"></i> Productos</a>
                     </li>
+                    <li>
+                        <a href="{% url 'servicios:list' %}"><i class="fa fa-cog"></i> Servicios</a>
+                    </li>
                 {% endif %}
             {% endif %}
 
