--- a/stib-administraciones/templates/novedades/novedades_list.html
+++ b/stib-administraciones/templates/novedades/novedades_list.html
@@ -13,12 +13,12 @@
          <div class="col-lg-4 pull-right" style="margin-top: 40px">
             <div class="row">
                 <div class="col-lg-12">
-                    {% include 'novedades/_search_form.html' %}
+                    {% include '_search_form.html' with modulo='novedades' %}
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    {% include 'novedades/_tags_filter.html' %}
+                    {% include '_tags_filter.html' with modulo='novedades' %}
                 </div>
             </div>
         </div><!-- / Columna de buscardor y Nube tags -->
