--- a/stib-administraciones/templates/_search_form.html
+++ b/stib-administraciones/templates/_search_form.html
@@ -1,4 +1,4 @@
-<form id='search-form-novedades' class="input-group" method="GET" action='{% url "productos:list" %}'>
+<form id='search-form-novedades' class="input-group" method="GET" action='/{{modulo}}'>
     <input id="q" name="q" type="text" class="form-control" placeholder="Buscar..."  data-provide='typeahead'>
     <span class="input-group-btn">
         <button class="btn btn-default" type="submit">
