--- a/stib-administraciones/templates/base.html
+++ b/stib-administraciones/templates/base.html
@@ -57,9 +57,8 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
+        {% include '_footer.html' %}
         {% block modal %}{% endblock modal %}
 
         <!-- Le javascript
