Cambios en estilos y menu lateral

--- a/stib-administraciones/templates/_footer.html
+++ b/stib-administraciones/templates/_footer.html
@@ -5,11 +5,20 @@
         <!-- Ubicanos -->
         <div class="col-sm-4 col-md-4 compadr">
           <h1>Ubicanos</h1>
-          <ul>
-            <li>Stib Ingeniería</li>
-            <li>San Martin 2264/2268/2272</li>
-            <li>Rosario, Santa Fe, Argentina</li>
-          </ul>
+            <table>
+                <tr>
+                    <td><i class="fa fa-home"></i></td>
+                    <td> Stib Ingeniería</td>
+                </tr>
+                <tr>
+                    <td><i class="fa fa-map-marker"></i></td>
+                    <td> San Martin 2264/2268/2272</td>
+                </tr>
+                <tr>
+                    <td><i class="fa fa-globe"></i></td>
+                    <td> Rosario, Santa Fe, Argentina</td>
+                </tr>
+            </table>
         </div><!-- / ubicanos -->
         <!-- Seguinos -->
         <div class="col-sm-4 col-md-4 newletter">
