--- a/stib-administraciones/templates/edificios/edificios_administraciones_update_form.html
+++ b/stib-administraciones/templates/edificios/edificios_administraciones_update_form.html
@@ -7,6 +7,8 @@
 
     <div class="row">
         <div class="col-lg-12">
+            <br>
+            <a href="{% url 'edificios:administraciones' form.instance.id %}"><i class="fa fa-reply"> Volver</i></a>
             <h1 class="page-header">
                 Editar  "{{form.instance.direccion}}"
             </h1>
