--- a/stib-administraciones/templates/servicios/servicios_detail.html
+++ b/stib-administraciones/templates/servicios/servicios_detail.html
@@ -53,6 +53,11 @@
                 {% endfor %}
             </div>
             {% autoescape off %}{{ object.descripcion }} {% endautoescape %}
+
+            <br><br>
+            <a class="btn btn-success" href="{% url 'servicios:pedido_cotizacion' object.id %}">
+                <i class="fa fa-envelope"></i> Solicitar una cotización
+            </a>
         </div>
     </div>
 {% endblock %}
