--- a/stib-administraciones/staticfiles/css/project.css
+++ b/stib-administraciones/staticfiles/css/project.css
@@ -56,7 +56,7 @@ body{
     #page-wrapper {
         position: inherit;
         margin: 0 0 0 250px;
-        padding: 0 30px;
+        padding: 0 10px 0 30px;
         min-height: 800px;
         border-left: 1px solid #e7e7e7;
     }
